# rejeki-mcp-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  RIGHT_PANEL_PLAN.md  evaluation.xml  pyproject.toml
apps/auth-server/: pyproject.toml
apps/auth-server/src/envel_auth/: server.py
apps/auth-server/src/rejeki_auth/: server.py
apps/mcp-server/: pyproject.toml  server.py
apps/mcp-server/src/envel_mcp/: database.py  deps.py  schema.sql  server.py
apps/mcp-server/src/envel_mcp/prompts/: budget.py  onboarding.py
apps/mcp-server/src/envel_mcp/tools/: accounts.py  analytics.py  apps.py  envelopes.py  scheduled.py  tags.py  transactions.py  wishlist.py
apps/mcp-server/src/rejeki_mcp/: database.py  deps.py  schema.sql  server.py
apps/mcp-server/src/rejeki_mcp/prompts/: onboarding.py
apps/mcp-server/src/rejeki_mcp/tools/: accounts.py  analytics.py  apps.py  envelopes.py  scheduled.py  transactions.py  wishlist.py
apps/mcp-server/src/rejeki_mcp/ui/: budget-allocator.html
apps/platform/: README.md  pyproject.toml
apps/platform/server/: pyproject.toml
apps/platform/server/src/envel_platform/: agent.py  auth.py  db.py  server.py
apps/platform/server/src/envel_platform/routes/: accounts.py  auth.py  chat.py  dashboard.py  envelopes.py  scheduled.py  tags.py  transactions.py  wishlist.py
apps/platform/server/src/rejeki_platform/: agent.py  auth.py  db.py  server.py
apps/platform/server/src/rejeki_platform/routes/: accounts.py  auth.py  chat.py  dashboard.py  envelopes.py  transactions.py
apps/platform/src/rejeki_platform/: auth.py  db.py  server.py
apps/platform/src/rejeki_platform/templates/: base.html  dashboard.html
apps/platform/web/: package-lock.json  package.json  vite.config.ts
apps/platform/web/src/: App.tsx  index.css
apps/platform/web/src/components/: AppSidebar.tsx  AuthGuard.tsx  login-form.tsx  signup-confirm-form.tsx  signup-form.tsx
apps/platform/web/src/components/accounts/: AccountDetailPanel.tsx  AddAccountForm.tsx
apps/platform/web/src/components/envelopes/: AddEnvelopeForm.tsx  EnvelopeDetailPanel.tsx  EnvelopeGroupSection.tsx  EnvelopeRow.tsx
apps/platform/web/src/components/shared/: AmountsVisibleBadge.tsx  PageHeader.tsx  PeriodPicker.tsx
apps/platform/web/src/components/sidebar-08/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx
apps/platform/web/src/contexts/: AuthContext.tsx
apps/platform/web/src/hooks/: useAccounts.ts  useAuth.tsx  useEnvelopes.ts  useIsMobile.ts  useTags.ts  useTransactions.ts  useWishlist.ts
apps/platform/web/src/layouts/: AppLayout.tsx
apps/platform/web/src/lib/: api.ts
apps/platform/web/src/pages/: AccountsPage.tsx  BudgetPage.tsx  ChatPage.tsx  ConnectPage.tsx  DashboardPage.tsx  EnvelopesPage.tsx  LoginPage.tsx  SettingsPage.tsx  SignupConfirmPage.tsx  SignupPage.tsx  TransactionsPage.tsx  WishlistPage.tsx
(+35 files in other folders)
