[project]
name = "envel_auth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastmcp", "uvicorn[standard]", "starlette", "pydantic", "python-dotenv", "bcrypt", "python-json-logger"]

[project.scripts]
envel-auth = "envel_auth.server:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
