[project]
name = "rejeki_mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastmcp", "httpx", "python-dotenv"]

[project.scripts]
rejeki = "rejeki_mcp.server:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
